# poc-adonis-edi

./: Dockerfile.cpu  README.md  cost_estimator.py  pyproject.toml
adonis/edi/: agent.py  models.py
adonis/edi/baml/baml_client/: async_client.py  inlinedbaml.py  partial_types.py  sync_client.py  type_builder.py  types.py
adonis/edi/baml/baml_src/: clients.baml  generators.baml
adonis/edi/baml/baml_src/X12N/835/5010_X221A1/: extractor.v0.baml  judge.v0.baml  validator.v0.baml
adonis/edi/baml/baml_src/X12N/835/5010_X221A1/parts/detail/: loop.v0.baml
adonis/edi/baml/baml_src/X12N/835/5010_X221A1/parts/heading/: main.v0.baml
adonis/edi/baml/baml_src/X12N/835/5010_X221A1/parts/summary/: main.v0.baml
adonis/edi/baml/baml_src/X12N/835/5010_X221A1/tests/extractor/: test_claim_specific_negotiated_discount.baml  test_incorrect_subscriber_as_patient_and_incorrect_id.baml  test_line_service_bonuses_impacting_payment_only.baml  test_line_service_penalty_impacting_payment_only.baml  test_line_service_tax_impacting_payment_only.baml  test_minimal_transaction.baml  test_missing_address_and_location.baml  test_missing_monetary_amounts.baml  test_multiple_claims_single_check.baml  test_not_covered_not_authorizedInpatient_facility_claim_days.baml  test_subscriber_missing_middle_initial.baml
adonis/edi/baml/baml_src/X12N/835/5010_X221A1/tests/validator/: test_non_compliant_transaction.baml
adonis/edi/baml/baml_src/extractors/x12/: extractor.baml
adonis/edi/baml/baml_src/extractors/x12/prompts/835/5010/: main.baml
(+76 files in other folders)
